# Szakdolgozat

./: sdkconfig
components/app_components/: CMakeLists.txt  app_components.h
components/app_components/bme280/: df_bme280.cpp  df_bme280.h
components/app_components/debounce/: df_debounce.cpp  df_debounce.h
components/app_components/debug/: df_debug.cpp  df_debug.h
components/app_components/function/: df_function.cpp  df_function.h
components/app_components/gpio/: df_gpio.cpp  df_gpio.h
components/app_components/interfaces/: df_i2c_master.cpp  df_i2c_master.h  df_sdspi.cpp  df_sdspi.h
components/app_components/thingspeak/: df_thingspeak_read.cpp  df_thingspeak_read.h  df_thingspeak_write.cpp  df_thingspeak_write.h
components/app_components/timers/: df_watchdog.cpp  df_watchdog.h
components/app_components/wifi/: df_wifi.cpp  df_wifi.h
components/bme280/: CMakeLists.txt  bme280.cpp  bme280.h
components/cpp_json/: CMakeLists.txt  json.cpp  json.h
components/dataflow/: CMakeLists.txt  any.cpp  any.hpp  component.cpp  component.h  dataflow.cpp  dataflow.h  node.cpp  node.hpp  port.cpp  port.h
components/driver_interface/: CMakeLists.txt  driver_interface.h
components/graphics/: CMakeLists.txt  graphics.cpp  graphics.h
components/http/: CMakeLists.txt  http_client.cpp  http_client.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h
components/ssd1306/: CMakeLists.txt  ssd1306.cpp  ssd1306.h
components/thingspeak/: CMakeLists.txt  thingspeak.cpp  thingspeak.h
components/wifi/: CMakeLists.txt  (+2 more)
main/: CMakeLists.txt  main.cpp
(+9 files in other folders)
